// cambio de prueba

Table pais {
  nombre_pais VARCHAR2(70) [not null]
  id_pais NUMBER(10,0) [pk, increment]
}

Table ciudad {
  nombre_ciudad VARCHAR2(70) [not null]
  id_pais NUMBER(10,0) [not null, default: 0, ref: > pais.id_pais]
  id_ciudad NUMBER(10,0) [pk, increment]
}

Table confederacion {
  nombre_confederacion VARCHAR2(70) [not null]
  id_confederacion NUMBER(10,0) [pk, increment]
}

Table estadio {
  nombre_estadio VARCHAR2(70) [not null]
  capacidad INTEGER [not null, default: 0]
  id_ciudad NUMBER(10,0) [not null, default: 0, ref: > ciudad.id_ciudad]
  id_estadio NUMBER(10,0) [pk, increment]
}

Table seleccion {
  nombre_seleccion VARCHAR2(70) [not null]
  id_confederacion NUMBER(10,0) [not null, default: 0, ref: > confederacion.id_confederacion]
  id_seleccion NUMBER(10,0) [pk, increment]
}

Table partido {
  id_estadio NUMBER(10,0) [not null, default: 0, ref: > estadio.id_estadio]
  fecha TIMESTAMP [not null, default: `SYSDATE`]
  fase VARCHAR2(10) [not null]
  id_seleccion_local NUMBER(10,0) [not null, default: 0, ref: > seleccion.id_seleccion]
  id_seleccion_visitante NUMBER(10,0) [not null, default: 0, ref: > seleccion.id_seleccion]
  goles_local INTEGER [not null, default: 0]
  goles_visitante INTEGER [not null, default: 0]
  id_partido NUMBER(10,0) [pk, increment]
  id_experiencia NUMBER(10, 0) [ref: > experiencia.id_experiencia]
}

//ENTREGA 2...

Table experiencia {
  id_experiencia NUMBER(10, 0) [pk, increment]
  cupos integer
  descripcion VARCHAR2(1000)
  estado VARCHAR2(15)
  precio_base NUMBER(12, 4)
  id_guia NUMBER(10, 0) [ref: > guia.id_guia, not null]
  horas_trabajadas INTEGER
}

Table guia {
  id_guia NUMBER(10, 0) [pk, increment]
  nombre VARCHAR2(20)
  guia_jefe NUMBER(10, 0) [ref: > guia.id_guia]
  id_nivel VARCHAR2(10) [ref: > nivel.id_nivel]
}

Table nivel {
  id_nivel VARCHAR2(10) [pk]
  valorxhora NUMBER(10, 2)
}

Table serviciosxinscripcion {
  id_servicio NUMBER(10, 0) [pk, ref: > servicio.id_servicio]
  id_experiencia NUMBER(10, 0) [pk, ref: > experiencia.id_experiencia]
  cantidad integer
}

Table servicio {
  id_servicio NUMBER(10, 0) [pk, increment]
  nombre VARCHAR2(50)
  descripcion VARCHAR2(1000)
  costo_adicional NUMBER(12, 4)
}

Table impuesto {
  id_impuesto NUMBER(10, 0) [pk]
  valor NUMBER(5, 2)
  tipo_impuesto VARCHAR2(20)
}

<<<<<<< HEAD
Table impuestoxservicio {
  id_impuesto NUMBER(10, 0) [pk, ref: > impuesto.id_impuesto]
  id_servicio NUMBER(10, 0) [pk, ref: > servicio.id_servicio]
}

Table cliente {
=======
Table Cliente{
>>>>>>> cde6337f81e593d556c9291e185bac989dede311
  nombre VARCHAR2(30)
  apellido VARCHAR2(30)
  tipo_documento VARCHAR2(2)
  id_cliente NUMBER(10, 0) [pk, increment]
  numero_telefono NUMBER(10, 0)
  email VARCHAR2(50)
}
Table transaccion{
  id_transaccion NUMBER(10, 0) [pk]
  valor NUMBER(12, 4)
  tipo_pago VARCHAR2(50)
  referencia NUMBER(10, 0)
  fecha_pago TIMESTAMP
}

Table inscripcion {
  id_experiencia NUMBER(10, 0) [pk, ref: > experiencia.id_experiencia]
  id_cliente NUMBER(10, 0) [pk, ref: > cliente.id_cliente]
}

Table pagos{
  id_cliente NUMBER(10, 0) [pk, ref: > inscripcion.id_cliente]
  id_experiencia NUMBER(10, 0) [pk, ref: > inscripcion.id_experiencia]
  id_transaccion NUMBER(10, 0) [pk, ref: > transaccion.id_transaccion]
}

/*
--CONSTRAINTS PARA UNIQUE
ALTER TABLE pais ADD CONSTRAINT uq_nombre_pais UNIQUE (nombre_pais);
ALTER TABLE ciudad ADD CONSTRAINT uq_nombre_ciudad UNIQUE (nombre_ciudad);
ALTER TABLE confederacion ADD CONSTRAINT uq_nombre_confederacion UNIQUE (nombre_confederacion);
ALTER TABLE estadio ADD CONSTRAINT uq_nombre_estadio UNIQUE (nombre_estadio);
ALTER TABLE seleccion ADD CONSTRAINT uq_nombre_seleccion UNIQUE (nombre_seleccion);
ALTER TABLE transaccion ADD CONSTRAINT uq_referencia UNIQUE (referencia);

--Constraints para check
ALTER TABLE ciudad ADD CONSTRAINT chk_id_pais CHECK (id_pais >= 0);
ALTER TABLE estadio ADD CONSTRAINT chk_capacidad CHECK (capacidad >= 0);
ALTER TABLE estadio ADD CONSTRAINT chk_id_ciudad CHECK (id_ciudad >= 0);
ALTER TABLE seleccion ADD CONSTRAINT chk_id_confederacion CHECK (id_confederacion >= 0);
ALTER TABLE experiencia ADD CONSTRAINT chk_estado CHECK (estado IN ('disponible', 'agotada', 'cancelada'));
ALTER TABLE impuesto ADD CONSTRAINT chk_tipo CHECK (tipo_impuesto IN ('IVA', 'TURISTICO', 'LOCAL', 'OTRO'));

  -- partido
ALTER TABLE partido ADD CONSTRAINT chk_id_estadio CHECK (id_estadio >= 0);
ALTER TABLE partido ADD CONSTRAINT chk_id_sel_local CHECK (id_seleccion_local >= 0);
ALTER TABLE partido ADD CONSTRAINT chk_id_sel_vis CHECK (id_seleccion_visitante >= 0);
ALTER TABLE partido ADD CONSTRAINT chk_goles_local CHECK (goles_local >= 0);
ALTER TABLE partido ADD CONSTRAINT chk_goles_vis CHECK (goles_visitante >= 0);
ALTER TABLE partido ADD CONSTRAINT chk_fase CHECK (fase IN ('GRUPOS', 'OCTAVOS', 'CUARTOS', 'SEMIFINAL', 'FINAL'));
ALTER TABLE partido ADD CONSTRAINT chk_jugar CHECK (id_seleccion_local != id_seleccion_visitante);
*/